--- a/Sunshine/app/src/main/res/layout/list_item_forecast.xml
+++ b/Sunshine/app/src/main/res/layout/list_item_forecast.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
     android:id="@+id/list_item_forecast_textview"
-    android:minHeight="@dimen/abc_text_size_medium_material"
-    android:height="@dimen/abc_text_size_subtitle_material_toolbar">
+    android:minHeight="32dp"
+    android:textSize="12dp"
+    android:padding="4dp">
 </TextView>
