--- a/Sunshine/app/src/main/res/menu/forecast_fragment.xml
+++ b/Sunshine/app/src/main/res/menu/forecast_fragment.xml
@@ -2,7 +2,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
 
-    <item android:id="@+id/action_refresh"
+    <item
+        android:id="@+id/action_refresh"
         android:title="@string/action_refresh"
         app:showAsAction="never" />
+
+
+
 </menu>
