--- a/Sunshine/app/src/main/res/menu/menu_detail.xml
+++ b/Sunshine/app/src/main/res/menu/menu_detail.xml
@@ -1,6 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.example.android.sunshine.app.DetailActivity">
 
     <item
         android:id="@+id/action_settings"
@@ -8,8 +9,4 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
-    <item
-        android:id="@+id/action_map"
-        android:title="@string/action_map"
-        app:showAsAction="never" />
 </menu>
